--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,5 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-/storage/seed/
-/storage/seed_processed_files/
+/storage/seed/*.csv
+/storage/seed_processed_files/*.csv
