REF: Alteração de permissão de arquivos.

--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:h/6hSB2ophx7o53CiShIqmj1XI8U4YgD5hAZ/C5oCsk=
+APP_KEY=base64:SAVHoCaXuHdFMFj3LKSdKXRlptsy7Lp8ZBsCDeXov+o=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8080
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_HOST=127.0.0.3
+DB_PORT=3309
 DB_DATABASE=arizona
-DB_USERNAME=root
-DB_PASSWORD=123123
+DB_USERNAME=arizona
+DB_PASSWORD=arizona
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
