--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_URL=http://localhost:8080
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=172.17.0.2
+DB_HOST=arizona-mysql
 DB_PORT=3306
 DB_DATABASE=arizona
 DB_USERNAME=arizona
